<resources>
    <string name="app_name">Smackchat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">header description</string>
    <string name="login">LOGIN</string>
    <string name="add_channel">add channel</string>
    <string name="message">message...</string>
    <string name="please_log_in">Please Log In</string>
    <string name="sendbutton">sendButton</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="user_name">user name</string>
    <string name="avatar_prompt">Tap to Generate Avatar</string>
    <string name="create_user">Create User</string>
    <string name="generate_background_color">Generate Background Color</string>
    <string name="select_avatar">Select Avatar</string>
    <string name="logout">Logout</string>
</resources>
